# gitlog2rss

./: Cargo.toml  README.md
src/: main.rs
