[package]
name = "gitlog2rss"
version = "1.2.0"
authors = ["Jörg Sommer <joerg@jo-so.de>"]
edition = "2018"
description = "Create an RSS feed from git log"
keywords = ["git", "rss-feed"]
categories = ["command-line-utilities"]
repository = "https://gitlab.com/jo-so/gitlog2rss"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.0"
clap = { version = "4.0.2", features = ["cargo"] }
env_logger = "0.9.1"
git2 = "0.15.0"
humantime = "2.0.0"
log = "0.4.0"
rss = "2.0.1"
url = "2.0.0"
yaml-rust = "0.4.0"
